--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 DISCORD_TOKEN=
 ADMIN_IDS=1338956004192157758
-ADMIN_ROLE_ID=1376177459870961694
+ADMIN_ROLE_ID=0000000
 DEFAULT_OS_IMAGE=ubuntu:22.04
 DOCKER_NETWORK=bridge
 MAX_CONTAINERS=100
 
 MAX_VPS_PER_USER=3
+
